# pika-hermes

./: BACKLOG.md  EXECUTION_PLAN.md  QA_CHECKLIST.md  README.md  STRATEGY.md  settings.gradle.kts
.github/workflows/: emulator-matrix.yml  release.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/io/agents/pokeclaw/agent/: AgentConfig.kt  DefaultAgentService.kt
app/src/main/java/io/agents/pokeclaw/agent/llm/: EnvImporter.kt  GgufModelManager.kt  LlmClientFactory.kt  LocalModelManager.kt  ModelConfigRepository.kt  ProviderCascade.kt
app/src/main/java/io/agents/pokeclaw/agent/llm/llama/: LlamaBackend.kt  LlamaEngine.kt
app/src/main/java/io/agents/pokeclaw/ui/chat/: ChatScreen.kt  ChatSessionController.kt  ComposeChatActivity.kt
app/src/main/java/io/agents/pokeclaw/ui/settings/: LlmConfigActivity.kt  SettingsActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_mouse.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/io/agents/pokeclaw/agent/llm/: CascadingLlmClientTest.kt  EnvImporterTest.kt  LlamaBackendPromptTest.kt
docs/: AI_AGENT_PLAYBOOK.md  OEM_COVERAGE_TIERS.md  community-issue-replies.md
scripts/: emulator-smoke.sh
